--- a/NOLF/ClientShellDLL/ClientShellDLL.vcxproj.filters
+++ b/NOLF/ClientShellDLL/ClientShellDLL.vcxproj.filters
@@ -602,6 +602,9 @@
     <ClCompile Include="WinUtil.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="OptimizedRenderer.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Shared\AssertMgr.h">
@@ -1276,6 +1279,9 @@
     <ClInclude Include="WinUtil.h">
       <Filter>Headers</Filter>
     </ClInclude>
+    <ClInclude Include="OptimizedRenderer.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Library Include="..\..\LT2\lithshared\libs\Debug\LithFontMgr_LT2.lib">
@@ -1325,6 +1331,12 @@
     </Library>
     <Library Include="..\..\Lt2\lithshared\libs\Release\RegMgr.lib">
       <Filter>libs_release</Filter>
+    </Library>
+    <Library Include="..\..\LIBS\SDL2-2.0.10\lib\x86\SDL2.lib">
+      <Filter>libs_debug</Filter>
+    </Library>
+    <Library Include="..\..\LIBS\SDL2-2.0.10\lib\x86\SDL2main.lib">
+      <Filter>libs_debug</Filter>
     </Library>
   </ItemGroup>
 </Project>
