--- a/NOLF/ObjectDLL/Object.vcxproj.filters
+++ b/NOLF/ObjectDLL/Object.vcxproj.filters
@@ -1311,13 +1311,7 @@
     <Library Include="..\..\Lt2\lithshared\libs\Release\RegMgr.lib">
       <Filter>libs_release</Filter>
     </Library>
-    <Library Include="..\..\LT2\lithshared\libs\Debug\CryptMgr.lib">
-      <Filter>libs_debug</Filter>
-    </Library>
     <Library Include="..\..\LT2\lithshared\libs\Debug\StdLith.lib">
-      <Filter>libs_debug</Filter>
-    </Library>
-    <Library Include="..\..\LT2\lithshared\libs\Debug\ButeMgrNoMFC.lib">
       <Filter>libs_debug</Filter>
     </Library>
     <Library Include="..\..\LT2\lithshared\libs\Debug\MFCStub.lib">
@@ -1333,6 +1327,12 @@
       <Filter>libs_debug</Filter>
     </Library>
     <Library Include="..\..\LIBS\SDL2-2.0.10\lib\x86\SDL2main.lib">
+      <Filter>libs_debug</Filter>
+    </Library>
+    <Library Include="..\..\LT2\lithshared\built\Debug\ButeMgr\ButeMgr.lib">
+      <Filter>libs_debug</Filter>
+    </Library>
+    <Library Include="..\..\LT2\lithshared\built\Debug\CryptMgr\cryptmgr.lib">
       <Filter>libs_debug</Filter>
     </Library>
   </ItemGroup>
